Proper scrollbar fix!

--- a/_sass/_custom-styles.scss
+++ b/_sass/_custom-styles.scss
@@ -1,6 +1,9 @@
-body {
-	overflow-x: hidden;
+body.vw-100 {
+	// overflow-x: hidden;
+	width: auto !important;
 }
+
+
 
 h2 {
 	@extend .mt-5;
